# debugged_drone_devices

./: README.md  env.sample  execution_manager.sh  main.py  pyproject.toml
app/: debugged_devices.py  update_view_stadistics.py
app/connections/: query.py
app/db/: __init__.py  query.py
app/db/connections/: connect.py
app/notifications/: smsc.py  teams.py
app/utils/: build_query_by_args.py  debugged_devices.py
app/utils/logger/: log_config.py
